data/derived/sp14/progs/unify/prog2405.ml.out
Characters 362-377:
  digitProducts a::acc (place+1) t l2 in
  ^^^^^^^^^^^^^^^
Error: This expression has type int -> int list -> int list -> int list
       but an expression was expected of type int
